r169 (31. 07. 2023):
Fixed a very rare and possible crash when a convert died or was deleted by the mission script
Buluc's Mansion: Fixed a crash
Slaughterhouse: Fixed a crash

r168 (30. 07. 2023):
Added Trigger Happy and Desperado buffs
Added "Show Scripted Snipers" option
Fixed an issue where achievement loot counters do not properly sync secured loot
Improved memory consumption by deferring loading of TimerGui, DigitalGui and SecurityLockGui trackers until they are needed
Gage Tracker: Fixed an issue where the tracker could get stuck on the screen after sync
Cook Off: Fixed an issue where achievement tracker for "I Am the One Who Knocks" is visible
Cook Off: Fixed an issue where Total XP Tracker is not visible
The Bomb: Forest: Fixed an issue where "Assault Delay" is not visible on client

r167 (15. 07. 2023):
Added option "Show Achievement Description"
To prevent crashes, mod will disable itself while in editor mode
Total XP Tracker: Tracker will stop showing XP when you reached your XP limit
Firestarter Day 2: Fixed an issue where Loot Counter is not visible
Henry's Rock: Fixed an issue where additional artifact in Archaeology room is not counted 
San Martín Bank: Fixed a visual issue where achievement "Gunpowder Glory" failed after alarm and you entered the bank

r166 (09. 07. 2023):
Updated Zipline icons
Total XP Tracker: Slightly increased size of the tracker
Fixed an issue where Total XP Tracker is stuck and does not count any gained experience

r165 (06. 07. 2023):
Rats Day 2: Fixed a crash after gangsters took their weapons
Hostile Takeover: Fixed an issue where achievement tracker for "Just Passing Through" could show up in loud

r164 (05. 07. 2023):
Crude Awakening: Fixed a crash on clients due to a typo

r163 (04. 07. 2023):
Added option "Aggregate Assault Delay and Duration into one tracker"
Crude Awakening: Fixed an issue where achievement tracker for "Human Torch" could get stuck